--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           </nav><!-- .nav-menu -->
     
           <div class="social-links">
-              <a href="https://www.linkedin.com/in/premsagar" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+              <a href="https://www.linkedin.com/in/prem-sagar-109354192/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
               <a href="mailto:spmospy@gmail.com" target="_blank" class="google"><i class="bx bxl-google"></i></a>
     
           </div>
