--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
                 <h3>Social Profiles</h3>
                 <div class="social-links">
                   <a href="https://www.linkedin.com/in/prem-sagar-109354192/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-                  <a href="https://www.github.com/rajaprerak" target="_blank" class="github"><i class="bx bxl-github"></i></a>
+                  <a href="https://github.com/mospy-prem" target="_blank" class="github"><i class="bx bxl-github"></i></a>
                   <a href="mailto:spmospy@gmail.com" target="_blank" class="google"><i class="bx bxl-google"></i></a>
     
                 </div>
